# pdi_deteccion_rx

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  deteccionRx.md  docker-compose.yml  implementation_plan.md  preprocessing.py  pyproject.toml  requirements.txt  tecnica_procesing.md  test_pdi.py  ui_style.py
docker/: Dockerfile.txt  docker-compose.yml
ejemplos/: labels.json
src/: app.py  get_labels.py  test_run.py
